--- a/Web/index.html
+++ b/Web/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D2k-bookshop</title>
   </head>
+  <!-- main bg -->
   <!-- bg-[#F1F5F8]  -->
   <!-- bg-blue-500 sm:bg-[#790A7B] md:bg-green-500 lg:bg-red-500 
   xl:bg-[#D3662D] 2xl:bg-[#FFFF00] 3xl:bg-[#A020F0] -->
-  <body class="bg-[#F1F5F8]">
+  <body class="bg-[#F1F5F8] sm:text-[1.1rem]">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
