--- a/Web/index.html
+++ b/Web/index.html
@@ -10,7 +10,7 @@
   <!-- bg-[#F1F5F8]  -->
   <!-- bg-blue-500 sm:bg-[#790A7B] md:bg-green-500 lg:bg-red-500 
   xl:bg-[#D3662D] 2xl:bg-[#FFFF00] 3xl:bg-[#A020F0] -->
-  <body class="bg-[#F1F5F8] sm:text-[1.1rem]">
+  <body class="bg-[#F1F5F8]">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
